// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagCount component Render the modal open with row of tags 1`] = `
<Modal
  actions={Array []}
  appendTo={<body />}
  ariaDescribedById=""
  className="ins-c-tag-modal"
  hideTitle={false}
  isFooterLeftAligned={true}
  isLarge={false}
  isOpen={true}
  isSmall={false}
  onClose={[Function]}
  showClose={true}
  title="Tags for paul.localhost.com"
>
  <PrimaryToolbar
    pagination={
      Object {
        "count": 10,
        "itemCount": 10,
        "onPerPageSelect": [Function],
        "onSetPage": [Function],
      }
    }
    toggleIsExpanded={[Function]}
  />
  <Component
    aria-label="paul.localhost.com tags"
    cells={
      Array [
        Object {
          "title": "Name",
        },
        Object {
          "title": "Tag Source",
        },
      ]
    }
    className="ins-c-tag-modal__table"
    rows={
      Array [
        Array [
          "key",
          "value",
        ],
        Array [
          "thing",
          "otherthing",
        ],
      ]
    }
    variant="compact"
  >
    <TableHeader />
    <TableBody />
  </Component>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  >
    <Component
      itemCount={10}
      onPerPageSelect={[Function]}
      onSetPage={[Function]}
      variant="bottom"
    />
  </TableToolbar>
</Modal>
`;

exports[`TagCount component Render the modal with a child component 1`] = `
<Modal
  actions={Array []}
  appendTo={<body />}
  ariaDescribedById=""
  className="ins-c-tag-modal"
  hideTitle={false}
  isFooterLeftAligned={true}
  isLarge={false}
  isOpen={true}
  isSmall={false}
  onClose={[Function]}
  showClose={true}
  title="Tags for paul.localhost.com"
>
  <PrimaryToolbar
    pagination={
      Object {
        "count": 10,
        "itemCount": 10,
        "onPerPageSelect": [Function],
        "onSetPage": [Function],
      }
    }
    toggleIsExpanded={[Function]}
  />
  <h1>
    I am a chile component
  </h1>
  <Component
    aria-label="paul.localhost.com tags"
    cells={
      Array [
        Object {
          "title": "Name",
        },
        Object {
          "title": "Tag Source",
        },
      ]
    }
    className="ins-c-tag-modal__table"
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "props": Object {
                "colSpan": 2,
              },
              "title": <EmptyTable>
                <Bullseye>
                  <EmptyState
                    variant="full"
                  >
                    <Title
                      headingLevel="h5"
                      size="lg"
                    >
                      No tags found
                    </Title>
                    <EmptyStateBody>
                      This filter criteria matches no tags. 
                      <br />
                       Try changing your filter settings.
                    </EmptyStateBody>
                  </EmptyState>
                </Bullseye>
              </EmptyTable>,
            },
          ],
        },
      ]
    }
    variant="compact"
  >
    <TableHeader />
    <TableBody />
  </Component>
  <TableToolbar
    className="ins-c-inventory__table--toolbar"
    isFooter={true}
  >
    <Component
      itemCount={10}
      onPerPageSelect={[Function]}
      onSetPage={[Function]}
      variant="bottom"
    />
  </TableToolbar>
</Modal>
`;
